layout bugs fixed

--- a/components/SoonCanvas2/style.module.scss
+++ b/components/SoonCanvas2/style.module.scss
@@ -9,3 +9,13 @@
   overflow: hidden;
   z-index: 1;
 }
+
+.loaderCircle {
+  height: 200px;
+  width: 200px;
+  background-color: white;
+  border-radius: 500px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
