--- a/styles/pages/Soon.module.scss
+++ b/styles/pages/Soon.module.scss
@@ -11,14 +11,6 @@
   }
 }
 
-.logo {
-  @extend .logoLetters;
-  display: inline-block;
-  top: 0;
-  right: 0;
-  position: absolute;
-}
-
 .stickyF {
   @extend .logoLetters;
   position: fixed;
@@ -84,14 +76,20 @@
     min-height: 100vh;
     overflow: hidden;
     display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     align-items: flex-end;
-    .content {
-      flex: 1;
-      z-index: 2;
-      .textXL {
-        font-size: 1.8rem;
-        @include respond-to('tablet-sm') {
-          font-size: 1.5rem;
+
+    .heroContent {
+      display: flex;
+      .content {
+        flex: 1;
+        z-index: 2;
+        .textXL {
+          font-size: 1.8rem;
+          @include respond-to('tablet-sm') {
+            font-size: 1.5rem;
+          }
         }
       }
     }
@@ -116,7 +114,7 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-
+      z-index: 2;
       @include respond-to('tablet-sm') {
         margin-bottom: 0;
       }
@@ -125,11 +123,11 @@
       display: flex;
       flex-direction: column;
       justify-content: flex-end;
-
       @include respond-to('tablet-sm') {
         margin-bottom: 0;
       }
       .year {
+        user-select: none;
         font-size: 16vw;
         margin: 0;
         line-height: 0.8;
@@ -152,6 +150,7 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     flex-flow: row nowrap;
+    overflow-y: hidden;
     @include respond-to('tablet-sm') {
       padding-left: 30vw;
     }
@@ -161,11 +160,9 @@
       flex-direction: column;
       justify-content: space-between;
       padding: 2rem;
-      padding-bottom: 6rem;
       border-left: 1px solid #000;
       background-color: rgba(0, 0, 0, 0);
       transition: background-color 0.15s ease-in;
-      padding-top: 26vw;
       &:hover {
         background-color: rgba(0, 0, 0, 0.08);
       }
@@ -176,6 +173,14 @@
         min-width: 90vw;
         padding: 0.5rem;
         padding-bottom: 3rem;
+      }
+      .cardTitle {
+        display: flex;
+        align-items: flex-end;
+      }
+      .cardTitle,
+      .cardContent {
+        flex: 1;
       }
     }
   }
